--- a/public/index.html
+++ b/public/index.html
@@ -6,110 +6,17 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">  
+  <link rel="shortcut icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000" />
-
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,900&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700,900&display=swap" rel="stylesheet">
+  <title>RN100</title>
 </head>
 
 <body>
-  <div class="container-fluid p-0 mb-0">
-    <header class="header">
-      <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom shadow-sm">
-        <img src="/assests/images/kverneland.png" class="my-0 mr-md-auto">
-        <nav class="my-2 my-md-0 mr-md-3">
-          <span class="header__option plow active p-2">Kverneland RN100</span>
-          <span class="header__option plow p-2 text">Kverneland RN100 Onland</span>
-          <span class="header__option phone p-2">Звоните: +38(067)5648740</span>
-        </nav>
-      </div>
-    </header>
-
-    <main class="main p-3 text-right text-white">
-      <div class="wrapper"></div>
-      <div class="row px-4">
-        <div class="offset-sm-3 offset-md-6"></div>
-        <div class="col-12 col-sm-9 col-md-6 mt-3 mt-md-5">
-          <h1 class="display-4">KVERNELAND RN100</h1>
-          <p class="lead">Полунавесной оборотный плуг родом из Норвегии.</p>
-          <button type="button" class="btn btn-danger btn-lg">Получить просчет</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="plow__switcher">
-          <span>Onland→</span>
-        </div>
-      </div>
-      <svg class="arrow__bottom" xml:space="preserve" xmlns:xlink="http://www.w3.org/1999/xlink"
-        enable-background="new 0 0 56.999 32" height="32px" id="Ebene_1" version="1.1" viewBox="0 0 56.999 32"
-        width="56.999px" x="0px" xmlns="http://www.w3.org/2000/svg" y="0px">
-        <polygon class="selection__arrow-svg--red" fill="#fff"
-          points="0,0.231 0,7.032 28.367,32 56.999,6.801 56.999,0 28.367,23.155 "></polygon>
-      </svg>
-    </main>
-  </div>
-
-  <!--INFORMATION GROUP-->
-  <div class="intro container mt-2" id="intro">
-      <ul class="list-group list-group-horizontal">
-          <li class="intro__button active list-group-item">Закалка стали</button></li>
-          <li class="intro__button list-group-item">Выбор корпусов</li>
-          <li class="intro__button list-group-item">Система страховки</li>
-        </ul>
-        <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-              <h3>Закалка стали</h3>
-              <div class="row">
-              <div class="text__content col-5">  Непревзойденная для каменистых условий!                
-                Полностью автоматическая система страховки Auto-Reset не имеет равных если речь идет о пахоте в экстремально каменистых условиях. Система представляет собой пакет рессор. При попадании на камень корпус плуга может выглубиться вплоть до поверхности поля и вернуться в рабочее положение автоматически, при этом нагрузка на раму будет максимально снижена.
-                Рессорные пакеты для разных типов почв В зависимоти от типа почвы плуги Kverneland с системой Auto-Reset могут оснащатся разным количеством рессор. Для легких и средних, сильно каменистых почв на страны СНГ поставляется усиленный пакет рессор, с силой срабатывания 900 кг. Для тяжелых почв возможно добавить рессоры или сделать сдвоенный пакет рессор с силой страбатывания 1400 кг.
-                Индивидуальное/</div>
-               <div class="img__content col-7 text-center">
-                 <img class="" src="/assests/images/2018-audi-rs7-overview-tab-engine.jfif" width="600px" height="300px" alt="">
-               </div>
-              </div>
-            </div>
-
-            <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">orem ipsum dolor sit amet consectetur adipisicing elit.
-                Natus animi laboriosam fuga assumenda cum a iure veritatis iste voluptatibus veniam quia, sit quidem, eum voluptas! 
-                Tempore aliquam rerum totam pariatur?</div>
-            <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">orem ipsum dolor sit amet consectetur adipisicing elit.
-                Natus animi laboriosam fuga assumenda cum a iure veritatis iste voluptatibus veniam quia, sit quidem, eum voluptas! 
-                Tempore aliquam rerum totam pariatur?</div>
-            <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">orem ipsum dolor sit amet consectetur adipisicing elit.
-                Natus animi laboriosam fuga assumenda cum a iure veritatis iste voluptatibus veniam quia, sit quidem, eum voluptas! 
-                Tempore aliquam rerum totam pariatur?</div>
-          </div>    
-  </div>
-
-    <!--PLOW INSPECTION-->
-  <div id="plow__inspection">
-
-  </div>
-
-  <!--TECHNICAL CHARACTERISTICS-->
-  <div id="tech__table">
-
-  </div>
-
-  <!--CLIENTS COMMENTS-->
-  <div id="client__comments">
-
-  </div>
-
-  <!--FEEDBACK-->
-  <div id="feedback">
-
-  </div>
-
-  <!--FOOTER-->
-  <div id="footer">
-
-  </div>
+  <div class="page" id="page"></div> 
 </body>
 
 </html>
